fixed bugs game over text align, keypad alignment and body class

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,6 +32,7 @@ body {
     font-family: "Bitcount Prop Single", sans-serif;
     font-weight: 500;
     color: hsl(0, 0%, 100%);
+    text-align: center;
     text-shadow: 0 6px 8px#000;
     margin: 0;
 }
@@ -50,11 +51,13 @@ body {
 }
 
 .correct {
+    height: 100vh;
     background-image: radial-gradient(
         ellipse 90% 85% at 50% 10%, white, hsl(87, 100%, 80%));
 }
 
 .incorrect {
+    height: 100vh;
     background-image: radial-gradient(
         ellipse 90% 85% at 50% 10%, white, hsl(0, 100%, 80%));
 }
@@ -168,7 +171,7 @@ h4 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 40vh;
+    height: 35vh;
 }
 
 .container span {
